--- a/portfolio.html
+++ b/portfolio.html
@@ -250,18 +250,57 @@
       </form>
     </section>
 
-    <section class="Blog" id="blog">
-      <h1 class="heading"><span>My</span>Blogs</h1>
-      <div class="box-container">
-        <i class="fas fa-graduation-cap"></i>
-        <div class="box">
-          <span>2019</span>
-          <h3>Software Developer</h3>
-          <p>I'M hardworking and always seeking outside the box.</p>
+    <section class="blogs" id="blogs">
+      <div class="blog">
+        <img src="./Images/images.jpeg" alt="blog-image" />
+        <div class="content">
+          <h1 class="title">web developer</h1>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            ultricies semper finibus. Duis et tristique purus. Fusce mi dolor,
+            dapibus ut pellentesque a, condimentum sit amet quam. In sed
+            efficitur nulla.
+          </p>
+          <a href="#"><h2>Read more</h2></a>
+        </div>
+      </div>
+      <div class="blog">
+        <img src="./Images/images.jpeg" alt="blog-image" />
+        <div class="content">
+          <h1 class="title">web developer</h1>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            ultricies semper finibus. Duis et tristique purus. Fusce mi dolor,
+            dapibus ueget metus in urna ultrices iaculis eget in metus.
+          </p>
+          <a href="#"><h2>Read more</h2></a>
+        </div>
+      </div>
+      <div class="blog">
+        <img src="./Images/images.jpeg" alt="blog-image" />
+        <div class="content">
+          <h1 class="title">web developer</h1>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            ultricies semper finibus. Duis et tristique purus. Fusce mi dolor,
+            dapibus ut felis. Duis porta nunc vitae metus mollis scelerisque.
+          </p>
+          <a href="#"><h2>Read more</h2></a>
+        </div>
+      </div>
+      <div class="blog">
+        <img src="./Images/images.jpeg" alt="blog-image" />
+        <div class="content">
+          <h1 class="title">web developer</h1>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            ultricies semper finibus. Duis et tristique purus. Fusce mi dolor,
+            dapibus ut Duis porta nunc vitae metus mollis scelerisque.
+          </p>
+          <a href="#"><h2>Read more</h2></a>
         </div>
       </div>
     </section>
-
     <section id="login">
       <div class="login-container">
         <h2>Login</h2>
