--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
           <h3><span>Qualification : </span>bms</h3>
           <h3><span>Post : </span>front end developer</h3>
           <h3><span>Language : </span> English</h3>
-          <a href="#"
+          <a href="http://127.0.0.1:5501/cv.html"
             ><button class="btn">
               download cv<iconify-icon
                 icon="material-symbols:download-for-offline"
@@ -261,7 +261,8 @@
             dapibus ut pellentesque a, condimentum sit amet quam. In sed
             efficitur nulla.
           </p>
-          <a href="#"><h2>Read more</h2></a>
+          <a href="blogs.html"><button class="rd" >Read More...</button>
+          </a>
         </div>
       </div>
       <div class="blog">
@@ -273,7 +274,8 @@
             ultricies semper finibus. Duis et tristique purus. Fusce mi dolor,
             dapibus ueget metus in urna ultrices iaculis eget in metus.
           </p>
-          <a href="#"><h2>Read more</h2></a>
+          <a href="blogs.html"><button class="rd" >Read More...</button>
+          </a>
         </div>
       </div>
       <div class="blog">
@@ -285,7 +287,8 @@
             ultricies semper finibus. Duis et tristique purus. Fusce mi dolor,
             dapibus ut felis. Duis porta nunc vitae metus mollis scelerisque.
           </p>
-          <a href="#"><h2>Read more</h2></a>
+          <a href="blogs.html"><a href="blogs.html"><button class="rd" >Read More...</button>
+          </a>
         </div>
       </div>
       <div class="blog">
@@ -297,19 +300,20 @@
             ultricies semper finibus. Duis et tristique purus. Fusce mi dolor,
             dapibus ut Duis porta nunc vitae metus mollis scelerisque.
           </p>
-          <a href="#"><h2>Read more</h2></a>
+          <a href="blogs.html"><a href="blogs.html"><button class="rd" >Read More...</button>
+          </a>
         </div>
       </div>
     </section>
     <section id="login">
       <div class="login-container">
-        <h2>Login</h2>
+        <h2>Login</h2><br><iconify-icon icon="ph:google-logo-fill"></iconify-icon>
         <form id="login-form">
-          <input id="login-email" type="email" placeholder="Email" /><br />
-          <input id="login-password" type="text" placeholder="Password" /><br />
-          <a href="admin.html">
-            <button class="btn loginbtn" type="button">Login</button>
-          </a>
+          <iconify-icon icon="mdi-light:email"></iconify-icon><input id="email" type="email" placeholder="Email" required /><br />
+          <iconify-icon icon="mdi:password-alert-outline"></iconify-icon>
+<input id="login-password" type="password" placeholder="Password" visible required/><br/>          
+          <a href="blogs.html">
+            <button class="btn loginbtn" type="onsubmit">Login</button></a>
           <p class="loginmsg">Forgot Password?</p>
         </form>
       </div>
