--- a/signup.html
+++ b/signup.html
@@ -5,37 +5,52 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sinup Page</title>
+  <script defer src="../portfolio.js">
+    window.location.href = "admin.html";
+  </script>
+  <script>src="../signUp.js"</script>
 </head>
 <body>
   
-  <form action="">
+  <form role="form" onsubmit=signUp id="form">
     <div class="container">
       <h1 class="j">Sin Up</h1>
       <p class="h"> Please fill in this form to create an account.</p>
       <hr>
 
-<div class="form">
+<div class="form success" id="form">
+  <label for="fname"><b>Fname</b></label>
+    <input type="text" placeholder="Fname" name="name" id="fname" required>
+
+    <label for="lname"><b>Lname</b></label>
+    <input type="text" placeholder="Lname" name="lname" id="lname" required>
+
 <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="email" name="email" required>
+    <input type="email" placeholder="email" name="email" id="email" required>
 
     <iconify-icon icon="material-symbols:check-circle-rounded"></iconify-icon>
 <iconify-icon icon="clarity:exclamation-circle-solid"></iconify-icon>
 <small>error message</small><br>
+</div>
 
+<div class="form error">
     <label for="password"><b>Password</b></label>
-    <input type="password" placeholder=" Password" name="psw" required>
+    <input type="password" placeholder=" Password" name="psw" id="pwd" required>
 
     <iconify-icon icon="material-symbols:check-circle-rounded"></iconify-icon>
 <iconify-icon icon="clarity:exclamation-circle-solid"></iconify-icon>
 <small>error message</small>
 <br>
+</div>
 
+<div class="form">
     <label for="psw-repeat"><b>Comferm Password</b></label>
-    <input type="password" placeholder="comferm Password" name="psw-repeat" required>
+    <input type="password" placeholder="comferm Password" name="psw-repeat"  id= "pwd1" required>
 
     <iconify-icon icon="material-symbols:check-circle-rounded"></iconify-icon>
 <iconify-icon icon="clarity:exclamation-circle-solid"></iconify-icon>
 <small>error message</small><label>
+</div>
 
       <input type="checkbox" checked="checked" name="remember" class="k"> Remember me  </label>
 
@@ -43,14 +58,18 @@
 
     <div class="clearfix">
       <button type="button" class="cancelbtn">Cancel</button>
-      <button type="submit" class="signupbtn">Sign Up</button>
-    </div>
+      <button type="submit" id="signupbtn" class="signupbtn">Sign Up</button>
   </div>
   </form>
-
- 
+  <h2>MY INFO</h2>
+  <div id="output">
+    
+  </div>
   <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
+
+  
 </body>
+
 <style>
   *{
     margin:0;
@@ -69,7 +88,7 @@
 
   
   .container{
-    margin: 1.3em;rem;
+    margin: 1.3em;
     background-image:url(../images/sinn.jpg);
     
 
@@ -108,7 +127,25 @@ input[type=text], input[type=password] {
   font-size: 1.7rem;
 }
 
+input[type=email] {
+  width: 1%;
+  padding: .3rem;
+  margin: 2px 0 1px 0;
+  width:fit-content;
+  display:flex;
+  border: none;
+  background: white;
+  border: solid rgb(156, 204, 207);
+  font-size: 1.7rem;
+}
+
 input[type=text]:focus, input[type=password]:focus {
+  background-color: rgb(253, 252, 252);
+  outline: none;
+  width:fit-content;
+}
+
+input[type=email]:focus {
   background-color: rgb(253, 252, 252);
   outline: none;
   width:fit-content;
@@ -171,9 +208,30 @@ button:hover {
   display: absolute;
  top:40rem;
 right: 10px;
-
-  
+visibility: hidden;
 }
+small{
+  visibility: hidden;
+}
+
+.form .success input{
+  border: 2px solid green ;
+}
+.form .error input{
+  border:  2px solid red ;
+}
+
+  .form .check-circle-rounded{
+visibility: visible;
+color:#07065c
+  }
+
+  .form .exclamation-circle-solid{
+visibility: visible;
+color:#04AA6D
+  }
+
+
 
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
@@ -183,4 +241,5 @@ right: 10px;
 }
 
 </style>
+
 </html>
