--- a/term.html
+++ b/term.html
@@ -7,7 +7,6 @@
   <title>Terms and Condition</title>
   <link rel="stylesheet" href="term.css">
 </head>
-<body>
   <div class="scr">
     <h1>Terms and condition</h1> <hr>
   <p>A Terms and Conditions agreement acts as a legal contract between you (the company) and the user. It's where you maintain your rights to exclude users from your app in the event that they abuse your website/app, set out the rules for using your service and note other important details and disclaimers.
@@ -18,5 +17,7 @@
     
     Terms and Conditions agreements are also known as Terms of Service or Terms of Use agreements. These terms are interchangeable, practically speaking.</p>
   </div>
+    <a href="signup.html" 
+<input type="checkbox" name="agree" class="agree"></input> <label  class="agree"  for="agree">Agree</label></a>
 </body>
 </html>
