--- a/Login.html
+++ b/Login.html
@@ -7,26 +7,52 @@
   <title>Login Page</title>
 </head>
 <body>
+  <style>
+   
+    #notification-message{
+font-size: 1rem;
+background-color: rgb(142, 188, 194);
+width:fit-content!;
+
+    } 
+    
+  </style>
+  <div id="notification">
+    <p id="notification-message"></p>
+  </div>
+  
   <form id="login-form">
     <h1> Hi There!</h1>
     <h2>You need to Login before Add a  new blog</h2>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required><br>
+    <input type="email" id="email" name="email" placeholder="Email" >
+    <input type="password" id="password" name="password" placeholder="password"><br>
    <input type="submit" value="Submit">
+   <div class="icon">
+    <a href="https://github.com/nkurikiyimana/nkurikiyimana"><iconify-icon icon="carbon:logo-github"></iconify-icon></a>
+    <a href="https://web.facebook.com/?_rdc=1&_rdr"><iconify-icon icon="bi:facebook"></iconify-icon> </a>
+    <a href="https://twitter.com/MeteoRwanda?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"> <iconify-icon icon="ant-design:twitter-circle-filled"></iconify-icon></a>
+   </div>
   </form>
-  <a href="admin.html"> <p>Go to Admin Pannel</p></a>
+
+
 <style>
+  
   p{
     margin-left:34rem ;
     font-weight: bold;
     font-size: 1.5rem;
   }
+  body{
+    background-image: url(./Images/sky.jpg);
+    background-size: cover;
+  }
   #login-form h1{
     margin-left: 1rem;
+    align-items: center;
+    text-align:center;
   }
   #login-form h2{
+    text-align: center;
     color: blue;
     font-weight: bold;
     text-transform:capitalize ;
@@ -40,41 +66,67 @@
   width:fit-content;
 }
 
-#login-form label {
-  display: block;
-  margin-bottom: 10px;
-  font-size: 2rem;
-}
 
 #login-form input[type="email"], #login-form input[type="password"] {
   width: 100%;
-  padding: 12px 20px;
+  padding:1rem;
   margin-bottom: 20px;
   box-sizing: border-box;
+  text-align: center;
+  margin: 1.2rem;
 }
 
 input[type="submit"]{
-padding: 1rem;
-border-radius: 30%;
+padding: .7rem;
+background-color: blue;
+border-radius: 5rem;
 font-weight: bold;
-color: blue;
-font-size: 1.5rem;
+color: rgb(251, 251, 255);
+font-size: 1.2rem;
+width: 100%;
+}
+.icon{
+  display:flex;
+  margin-left: 8rem;
+  padding: 1.8rem;
+  gap:4rem;
+  font-size: 2rem;
+}
+
+.icon:hover{
+  color:#fff;
+  opacity: 70%;
 }
 </style> 
 
 <script>
 
+function showNotification(message) {
+  var notification = document.getElementById("notification");
+  var notificationMessage = document.getElementById("notification-message");
+  notificationMessage.innerHTML = message;
+  notification.style.display = "block";
+  setTimeout(function() {
+    notification.style.display = "none";
+  }, 5000);
+}
+
+
+
+
 const form = document.getElementById("login-form");
 form.addEventListener("submit", function(event) {
   event.preventDefault();
-});
+
 
 form.addEventListener("submit", function(event) {
   event.preventDefault();
   const email = document.getElementById("email").value;
   const password = document.getElementById("password").value;
   if (email === "" || password === "") {
-    alert("Please fill in both email and password fields.");
+    
+    showNotification("Please fill required field");
+    return
   } else {
     const previousEmail = localStorage.getItem("email");
     const previousPassword = localStorage.getItem("password");
@@ -95,10 +147,16 @@ form.addEventListener("submit", function(event) {
   form.reset();
   
   // Show a message to the user
-  alert("logn successful!");
+  showNotification("Log In Success!!");
+
+  window.location.href='./admin.html';
+  showNotification("Log In Success!!");
+  
+});
+
 });
 
 </script>
-
+<script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
 </body>
 </html>
