--- a/admin.html
+++ b/admin.html
@@ -4,104 +4,112 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Pannel</title>
+  <title>Add blog</title>
+  <link rel="stylesheet" href="admin.css">
 </head>
 <body>
+<Style>
+
+  .blogg{
+    background-image: url(./Images/sky.jpg);
+    padding: 14rem;
+    background-size: cover;
+  }
+  #blog-form{
+    padding: 4rem;
+    border: solid white;
+    border-radius: 5%;
+    margin-top: 1rem;
+   
+  }
+</Style>
+<div class="blogg">
   <form id="blog-form">
-    <label>Blog Title:</label>
-    <input type="text" id="blog-title">
-    <label>Profile Image:</label>
-    <input type="file" id="profile-image">
-    <label>Description:</label>
-    <textarea id="blog-description"></textarea>
-    <button type="submit">Post</button>
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title">
+    <br>
+    <input type="date" id="date">
+    <label for="image">Image URL:</label>
+    <input type="text" id="image" name="image">
+    <br>
+    <label for="description">Description:</label>
+    <textarea id="description" name="description"></textarea>
+    <br>
+    <button type="submit" id="submit-blog">Submit</button>
   </form>
   
+</div>
 
-<Script>
-const form = document.getElementById("blog-form");
-form.addEventListener("submit", function(e) {
-  e.preventDefault();
-  const title = document.getElementById("blog-title").value;
-  const image = document.getElementById("profile-image").value;
-  const description = document.getElementById("blog-description").value;
-
-  const blog = {
-    title: title,
-    image: image,
-    description: description
-  };
-  //Checking if the "blogs" key already exists in local storage
-  if(localStorage.getItem("blogs")) {
-    //If the key exists, we retrieve the existing data and push the new blog
-    let blogs = JSON.parse(localStorage.getItem("blogs"));
-    blogs.push(blog);
-    localStorage.setItem("blogs", JSON.stringify(blogs));
-  } else {
-    //If the key does not exist, we create a new key and store the new blog
-    let blogs = [];
-    blogs.push(blog);
-    localStorage.setItem("blogs", JSON.stringify(blogs));
-  }
-  //redirecting to the blog list page
-  window.location.href = "blog-list.html";
-});
+<div id="notification">
+  <p id="notification-message"></p>
+</div>
 
 
+  <style>
+    #notification{
+      background-color: blue;
+      width: fit-content;
+      display: block;
+      margin-left: 70rem;
+      float: top;
 
-</Script>
-    <style>
-      /* Responsive design */
-@media screen and (max-width: 600px) {
-  form {
-    width: 100%;
-  }
-  input[type="text"], textarea {
-    width: 100%;
-  }
-}
-#blog-form {
-    width: 200px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f2f2f2;
-    border-radius: 10px;
-}
-
-label {
-    display: block;
-    margin-bottom: 10px;
-    font-size: 18px;
-}
-
-input[type="text"], textarea {
-    width: 100%;
-    padding: 12px 20px;
-    margin-bottom: 20px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 18px;
-}
-
-#post-btn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
-}
-
-#post-btn:hover {
-    background-color: #45a049;
-}
-
+    }
+#notification-message{
+  font-size: 1.3rem;
+  color: white;
+      } 
+      
     </style>
 
+<script>
 
-</form>
+function showNotification(message) {
+var notification = document.getElementById("notification");
+var notificationMessage = document.getElementById("notification-message");
+notificationMessage.innerHTML = message;
+setTimeout(function() {
+  notification.style.display = "flex";
+}, 3000);
+}
+// Get form elements
+const form = document.getElementById("blog-form");
+const titleInput = document.getElementById("title");
+const dateInput = document.getElementById("date");
+const imageInput = document.getElementById("image");
+const descInput = document.getElementById("description");
 
+// Handle form submission
+form.addEventListener("submit", (e) => {
+  e.preventDefault();
+
+  // Get form data
+  const title = titleInput.value;
+  const date = dateInput.value;
+  const image = imageInput.value;
+  const desc = descInput.value;
+
+  // Create blog object
+  const blog = {
+    title: title,
+    date: date,
+    image: image,
+    desc: desc,
+  };
+
+  // Get existing blog list from local storage
+  let blogList = JSON.parse(localStorage.getItem("blogList")) || [];
+
+  // Add new blog to blog list
+  blogList.push(blog);
+
+  // Save updated blog list to local storage
+  localStorage.setItem("blogList", JSON.stringify(blogList));
+
+  // Redirect to blog list page
+  showNotification("Blog added Succeful!")
+  window.location.href = "blogs.html";
+});
+
+</Script>
 </body>
 </html>
