--- a/validate.html
+++ b/validate.html
@@ -7,51 +7,68 @@
   <title>Document</title>
 </head>
 <body>
-  <form>
-    <label for="fname">First Name:</label>
-    <input type="text" id="fname" name="fname"><br><br>
-    <label for="lname">Last Name:</label>
-    <input type="text" id="lname" name="lname"><br><br>
+  <form id="contact-form">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name"><br>
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email"><br><br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password"><br><br>
-    <label for="confirm">Confirm Password:</label>
-    <input type="password" id="confirm" name="confirm"><br><br>
+    <input type="email" id="email" name="email"><br>
+    <label for="message">Message:</label>
+    <textarea id="message" name="message"></textarea><br>
     <input type="submit" value="Submit">
   </form>
   
 <script>
+const form = document.getElementById("contact-form");
+form.addEventListener("submit", (e) => {
+  e.preventDefault();
+  const name = document.getElementById("name").value;
+  const email = document.getElementById("email").value;
+  const message = document.getElementById("message").value;
 
-//form validation and local storage
-var fname = document.getElementById("fname").value;
-  var lname = document.getElementById("lname").value;
-  var email = document.getElementById("email").value;
-  var password = document.getElementById("password").value;
-  var confirm = document.getElementById("confirm").value;
+  // Send the data to the server
+  fetch("/api/comments", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ name, email, message })
+  })
+    .then(() => {
+      // Redirect to the dashboard page
+      window.location.href = "/dashboard.html";
+    })
+    .catch(error => {
+      console.error(error);
+    });
+});
 
-  function validateForm() {
-    if (fname.value == "") {
-      alert("First name must be filled out");
-      return false;
-    }
-    if (lname.value == "") {
-      alert("Last name must be filled out");
-      return false;
-    }
-    if (email.value == "") {
-      alert("Email must be filled out");
-      return false;
-    }
-    if (password.value != confirm.value) {
-      alert("Passwords do not match");
-      return false;
-    }
-    localStorage.setItem("fname", fname.value);
-    localStorage.setItem("lname", lname.value);
-    localStorage.setItem("email", email.value);
-    localStorage.setItem("password", password.value);
-  }
-  </script>
+app.post("/api/comments", (req, res) => {
+  const { name, email, message } = req.body;
+  // Save the data to a database or file system
+  // ...
+  res.sendStatus(200);
+});
+
+
+<ul id="comment-list">
+  <!-- Comment items go here -->
+</ul>
+
+
+  fetch("/api/comments")
+    .then(response => response.json())
+    .then(comments => {
+      const list = document.getElementById("comment-list");
+      comments.forEach(comment => {
+        const item = document.createElement("li");
+        item.textContent = `${comment.name}: ${comment.message}`;
+        list.appendChild(item);
+      });
+    })
+    .catch(error => {
+      console.error(error);
+    });
+</script>
+
+
+  
 </body>
 </html>
