--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <body>
       <section class="hom" id="home">
         <div>
-          <img src="images/me.jpg" alt="Faustin">
+          <img src="./images/me.jpg" alt="Faustin">
         </div>
          <div class="container">
           
