--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <section class="blogs" id="blogs">
      
       <div class="blog">
-        <img src="./Images/blogs.jpg" alt="blog-image" />
+        <img class="bgimg" src="./Images/blogs.jpg" alt="blog-image" />
         <div class="content">
           <h1 class="title">web developer</h1>
           <p class="description">
