--- a/blogs.html
+++ b/blogs.html
@@ -94,7 +94,7 @@
           </section>
   </div>
 
-  <div id="like-section">
+  <div id="like-sectio">
   <label for="like">likes</label> 
   <iconify-icon icon="ant-design:like-outlined"></iconify-icon>
    <button id="yes-button" onclick="incrementLikes('yes')">Yes</button>
@@ -112,6 +112,7 @@ let likeCounts = {
 // Function to increment likes
 function incrementLikes(choice) {
   likeCounts[choice]++;
+
   updateLikeCount();
 }
 
@@ -165,10 +166,12 @@ window.onload = function() {
 
 </script>
 <style>
+  
   #mycontainer{
-color:rgb(5, 5, 177);
+color:rgb(229, 236, 238);
 display: flex;
 flex-direction: column;
+
   }
 </style>
 <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
@@ -183,21 +186,56 @@ flex-direction: column;
        <button id="yes-button" onclick="incrementLikes('yes')">Yes</button>
        <iconify-icon icon="mdi:dislike-outline"></iconify-icon>
        <button id="no-button" onclick="incrementLikes('no')">No</button>
-        <p id="like-count"></p>
+        <p id="like-count"></p><br>
+        <a href="./blogs.html"><b>Read more...</b></a>
       </div>
+    
   </div>
-  <a href="./blogs.html"><b>Read more...</b></a>
+ 
   <style>
+
+    #like-section{
+      display: flex;
+      flex-direction: column;
+      padding-top: 8rem;
+    }
+    #yes-button{
+      padding: .1rem;
+      height: 2rem;
+    }
+    #no-button{
+      padding: .1rem;
+      height: 2rem;
+    }
     #blog-list{
       display:flex;
-      align-items: center;
       background-image: url(./Images/sky.jpg);
       background-size: cover;
-      width: fit-content;
-      font-size: 2rem;
-      margin-left: 15rem;
-  
-      padding: 2rem;
+      border: solid white;
+      padding-top: 3rem;
+    }
+    #blog-list p{
+      color:rgb(3, 0, 7) 
+    }
+
+    #blog-list img{
+      width: 80%;
+      margin-bottom: 5rem;
+      position: relative;
+      align-items: center;
+      margin-top: 0;
+      margin-left: 2rem;
+    }
+    #blog-list h2{
+      margin-bottom: 2rem;
+      align-items: center;
+      margin-left: 4rem;
+    }
+
+     a{
+     margin:1rem;
+     color:aliceblue;
+     font-size: 0.8rem;
     }
   </style>
   
@@ -232,8 +270,6 @@ flex-direction: column;
   
     blogListContainer.appendChild(blogItem);
   });
-  
-  
   
   // Get blog list from local storage
   let blogListt = JSON.parse(localStorage.getItem("blogList")) || [];
