restyling and adding some functionality

--- a/adminn.html
+++ b/adminn.html
@@ -107,8 +107,9 @@ form.addEventListener("submit", (e) => {
 
   // Redirect to blog list page
   showNotification("Blog added Succeful!")
-  window.location.href = "dashboard.html";
+  window.location.href = "./dashboard.html";
 });
+
 
 </Script>
 </body>
