--- a/ui/adminn.html
+++ b/ui/adminn.html
@@ -29,12 +29,12 @@
     <label for="title">Title:</label>
     <input type="text" id="title" name="title">
     <br>
-    <input type="date" id="date">
-    <label for="image">Image URL:</label>
-    <input type="text" id="image" name="image">
+    <!-- <input type="date" id="date"> -->
+    <label for="image">Image:</label>
+    <input type="file" id="image" name="image">
     <br>
-    <label for="description">Description:</label>
-    <textarea id="description" name="description"></textarea>
+    <label for="content">Content:</label>
+    <textarea id="content" name="Content"></textarea>
     <br>
     <button type="submit" id="submit-blog">Submit</button>
   </form>
@@ -64,69 +64,6 @@
 
 <script>
 
-function showNotification(message) {
-var notification = document.getElementById("notification");
-var notificationMessage = document.getElementById("notification-message");
-notificationMessage.innerHTML = message;
-setTimeout(function() {
-  notification.style.display = "flex";
-}, 3000);
-}
-// Get form elements
-const form = document.getElementById("blog-form");
-const titleInput = document.getElementById("title");
-const dateInput = document.getElementById("date");
-const imageInput = document.getElementById("image");
-const descInput = document.getElementById("description");
-
-// Handle form submission
-form.addEventListener("submit", async (e) => {
-  e.preventDefault();
-
-  // Get form data
-  const title = titleInput.value;
-  const date = dateInput.value;
-  const image = imageInput.value;
-  const desc = descInput.value;
-
-  const blog = {
-    title: title,
-    date: date,
-    image: image,
-    desc: desc,
-  };
-await axios.post("http://localhost:3000/api/posts", blog)
-.then((response)=>{
-  console.log(response);
-})
-.catch((error)=>{
-  console.log(error);
-})
-
-
-/*
-  // Create blog object
-  const blog = {
-    title: title,
-    date: date,
-    image: image,
-    desc: desc,
-  };
-
-  // Get existing blog list from local storage
-  let blogList = JSON.parse(localStorage.getItem("blogList")) || [];
-
-  // Add new blog to blog list
-  blogList.push(blog);
-
-  // Save updated blog list to local storage
-  localStorage.setItem("blogList", JSON.stringify(blogList));
-
-  // Redirect to blog list page
-  showNotification("Blog added Succeful!")
-  window.location.href = "./dashboard.html";*/
-
-});
 
 
 </Script>
